--- a/index.html
+++ b/index.html
@@ -686,8 +686,8 @@
             <span class="brand-text">ATOM Robótica</span>
         </div>
         <div class="nav-contact">
-            <span style="color: #7ef07e; font-weight: 600;">📱 75037564 - 77032361</span>
-            <button class="contact-btn" onclick="window.open('https://wa.me/59175037564', '_blank')">
+            <span style="color: #7ef07e; font-weight: 600;">📱 78624837- 77032361</span>
+            <button class="contact-btn" onclick="window.open('https://wa.me/59178624837', '_blank')">
                 💬 Contactar
             </button>
         </div>
@@ -723,7 +723,7 @@
         <div class="feature-item">
             <div class="feature-icon">✅</div>
             <div class="feature-title">Garantía</div>
-            <div>Productos originales</div>
+            <div>Productos con la mejor calidad</div>
         </div>
         <div class="feature-item">
             <div class="feature-icon">💰</div>
@@ -732,7 +732,7 @@
         </div>
         <div class="feature-item">
             <div class="feature-icon">🎓</div>
-            <div class="feature-title">Soporte Técnico</div>
+            <div class="feature-title">Soporte</div>
             <div>Asesoría gratuita</div>
         </div>
     </div>
@@ -764,7 +764,7 @@
     </section>
 
     <!-- WHATSAPP FLOAT BUTTON -->
-    <a href="https://wa.me/59175037564?text=Hola!%20Vi%20su%20catálogo%20y%20me%20interesa%20un%20producto" class="whatsapp-float" target="_blank">
+    <a href="https://wa.me/59178624837?text=Hola!%20Vi%20su%20catálogo%20y%20me%20interesa%20un%20producto" class="whatsapp-float" target="_blank">
         💬
     </a>
 
@@ -781,10 +781,12 @@
                 </div>
             </div>
             <div class="footer-section">
-                <h3>Contacto</h3>
-                <p>📱 75037564 - 77032361</p>
-                <p>📍 La Paz, Bolivia</p>
-                <p>📧 @atom.electrnica.ro</p>
+                <h3>Ubicación</h3>
+                <p>📍 El Alto, Zona Villa Dolores<br>C4, Galería Candia, Local 7</p>
+                <button class="contact-btn" style="margin-top: 1rem;" 
+                        onclick="window.open('https://maps.app.goo.gl/cKH53EbaUiGVkDqE9', '_blank')">
+                    🗺️ Ver en Mapa
+                </button>
             </div>
             <div class="footer-section">
                 <h3>Horarios</h3>
