--- a/index.html
+++ b/index.html
@@ -872,6 +872,23 @@
                 description: 'Microcontrolador PIC16F877A DIP40 original.',
                 specs: ['Voltaje de operación:  4V a 5.5V', 'Numero de I/O: 33', 'RAM: 368 Bytes', 'Comparadores: 2 ADC 8 ch, 10-bit']
             },
+            {
+                category: 'placas',
+                name: 'Arduino Mega',
+                price: 180,
+                image: 'images/arduino-nano.jpg',
+                description: 'El Arduino Mega 2560 es una placa electrónica basada en el microcontrolador ATmega2560',
+                specs: ['Voltaje operativo: 5 V', 'Pines analógicos de entrada: 16', 'Pines digitales de entrada/salida: 54, 15 PWM', 'Comparadores: 2 ADC 8 ch, 10-bit']
+            },
+            {
+                category: 'placas',
+                name: 'ESP32 CAM, cámara: OV2640',
+                price: 160,
+                image: 'images/arduino-nano.jpg',
+                description: 'El Arduino Mega 2560 es una placa electrónica basada en el microcontrolador ATmega2560',
+                specs: ['Admite camaras: OV2640 y OV7670', 'Interfaz de programación:  MicroUSB CH340', 'RAM: 520KB SRAM+4M PSRAM', 'Wifi: 802.11 b/g/n']
+            },
+            
             
             // SENSORES
             {
