--- a/index.html
+++ b/index.html
@@ -1243,6 +1243,13 @@
                 description: 'Plataforma elevadora hidráulica de madera.',
                 specs: ['Material: Madera', 'Hidráulico', 'STEM educativo', 'Para armar']
             }
+            {
+                category: 'kits',
+                name: 'Kit Avion',
+                price: 55,
+                description: 'Avion con elice de madera .',
+                specs: ['Material: Madera', 'pilas', 'STEM educativo', 'Para armar']
+            }
         ];
 
         let currentCategory = 'all';
