--- a/index.html
+++ b/index.html
@@ -1242,12 +1242,19 @@
                 price: 55,
                 description: 'Plataforma elevadora hidráulica de madera.',
                 specs: ['Material: Madera', 'Hidráulico', 'STEM educativo', 'Para armar']
-            }
+            },
             {
                 category: 'kits',
                 name: 'Kit Avion',
                 price: 55,
                 description: 'Avion con elice de madera .',
+                specs: ['Material: Madera', 'pilas', 'STEM educativo', 'Para armar']
+            },
+            {
+                category: 'kits',
+                name: 'Kit carro con control',
+                price: 65,
+                description: 'Carro con control de madera.',
                 specs: ['Material: Madera', 'pilas', 'STEM educativo', 'Para armar']
             }
         ];
