--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,20 @@
                 description: 'Motor con caja reductora para autos robot.',
                 specs: ['Voltaje: 3V-6V', 'Relación: 48:1', 'Bidireccional', 'Sin rueda']
             },
+             {
+                category: 'motores',
+                name: 'Motor DC Motorreductor',
+                price: 20,
+                description: 'Motor con caja reductora para autos robot.',
+                specs: ['Voltaje: 3V-6V', 'Relación: 120:1', 'Bidireccional', 'Sin rueda']
+            },
+             {
+                category: 'motores',
+                name: 'Motor DC Motorreductor',
+                price: 22,
+                description: 'Motor con caja reductora para autos robot.',
+                specs: ['Voltaje: 3V-6V', 'Relación: 220:1', 'Bidireccional', 'Sin rueda']
+            },
             {
                 category: 'motores',
                 name: 'Motor DC con Rueda',
@@ -1038,6 +1052,50 @@
                 description: 'Motor motorreductor con rueda incluida.',
                 specs: ['Voltaje: 3V-6V', 'Relación: 48:1', 'Con rueda', 'Listo para usar']
             },
+             {
+                category: 'motores',
+                name: 'Micro Motor 100 RPM DC',
+                price: 45,
+                description: 'Motor 6V 100RPM ideal para proyectos de robótica móvil como robots seguidores de línea y microsumos.',
+                specs: ['Voltaje: 3V-6V', 'Reducción: 300:1', 'Dimensiones: 24 x 10 x 12 mm', 'Peso: 15g']
+            },
+             {
+                category: 'motores',
+                name: 'Micro Motor 500 RPM DC',
+                price: 55,
+                description: 'Motor electrico de alta calidad y peso ligero, beneficiado de alto par y bajo ruido, pequeño volumen, gran torsión.',
+                specs: ['Voltaje: 3V-6V', 'Corriente: 160 mA', 'Dimensiones: 24 x 10 x 12 mm', 'Peso: 15g']
+            },
+            {
+                category: 'motores',
+                name: 'Micro Motor 1000 RPM DC',
+                price: 55,
+                description: 'El Micromotor N20 de 1000 RPM integra un motor DC y una caja reductora (30:1) con engranajes de metal, lo que permite entregar un excelente torque y una velocidad regular (1000 RPM). ',
+                specs: ['Voltaje: 3V-6V', 'Reducción: 30:1', 'Eje de salida: 3mm diámetro y 10mm largo', 'Peso: 40g']
+            },
+                {
+                category: 'motores',
+                name: 'Motor NEMA 17 paso a paso',
+                price: 160,
+                description: 'Este motor stepper es ideal para proyectos de impresoras 3D y máquinaria CNC gracias a su precisión de giro y facilidad de control. (Imagenes referenciales) ',
+                specs: ['Voltaje Nominal: 3,27V', '80 grados máximo (corriente nominal, 2 fases)', 'Corriente Nominal: 1,68A', 'Total inercia kg.m.m: 57g.m.m']
+            },
+             {
+                category: 'motores',
+                name: 'rueda amarilla',
+                price: 16,
+                description: 'Rueda para coche Robot para Arduino mejor Calidad,',
+                specs: ['Diametro: 63 mm', 'Espesor: 28 mm', 'Par']
+            },
+                {
+                category: 'motores',
+                name: 'Rueda loca',
+                price: 9,
+                description: 'Rueda Loca Para Proyectos escolares de robótica y electrónica,',
+                specs: ['rueda']
+            },
+            
+
 
             // MÓDULOS
             {
