--- a/index.html
+++ b/index.html
@@ -824,8 +824,8 @@
             {
                 category: 'placas',
                 name: 'Raspberry PI Pico W',
-                price: 155,
-                image: 'images/raspberry-pico-w.jpg',
+                price: 160,
+                image: 'images/Raspberry-pi-pico-w.jpg',
                 badge: 'POPULAR',
                 description: 'Microcontrolador compacto con Wi-Fi integrado.',
                 specs: ['Procesador RP2040 dual-core', 'Entrada USB', '26 pines GPIO', 'Compatible con MicroPython']
