--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                 category: 'placas',
                 name: 'Raspberry PI Pico W',
                 price: 160,
-                image: 'images/Raspberry-pi-pico-w.jpg',
+                image: 'images/Raspberry-pi-pico-w.png',
                 badge: 'POPULAR',
                 description: 'Microcontrolador compacto con Wi-Fi integrado.',
                 specs: ['Procesador RP2040 dual-core', 'Entrada USB', '26 pines GPIO', 'Compatible con MicroPython']
