--- a/index.html
+++ b/index.html
@@ -834,8 +834,7 @@
                 category: 'placas',
                 name: 'ESP32 30 pines',
                 price: 82,
-                image: 'images/esp32-30.jpg',
-                badge: 'HOT',
+                image: 'images/esp32-30p.png',
                 description: 'Módulo microcontrolador potente con Wi-Fi y Bluetooth.',
                 specs: ['Doble núcleo 240 MHz', 'USB tipo C', '30 pines', 'Wi-Fi + Bluetooth']
             },
@@ -843,7 +842,7 @@
                 category: 'placas',
                 name: 'ESP32 38 pines',
                 price: 90,
-                image: 'images/esp32-38.jpg',
+                image: 'images/esp32-38p.png',
                 description: 'Módulo microcontrolador potente con Wi-Fi y Bluetooth.',
                 specs: ['Doble núcleo 240 MHz', 'USB tipo C', '30 pines', 'Wi-Fi + Bluetooth']
             },
@@ -851,7 +850,7 @@
                 category: 'placas',
                 name: 'Arduino UNO R3',
                 price: 90,
-                image: 'images/arduino-uno.jpg',
+                image: 'images/arduino.png',
                 badge: 'CLÁSICO',
                 description: 'La placa más popular para aprender electrónica.',
                 specs: ['ATmega328P', '14 pines digitales', 'Arduino IDE', 'Cable incluido']
@@ -859,8 +858,8 @@
             {
                 category: 'placas',
                 name: 'Arduino Nano V3.0',
-                price: 55,
-                image: 'images/arduino-nano.jpg',
+                price: 60,
+                image: 'images/nano.png',
                 description: 'Versión compacta del Arduino para prototipos.',
                 specs: ['ATmega328P 16 MHz', 'Pines soldados y sin soldar', 'USB CH340', 'Cable tipo C']
             },
