--- a/index.html
+++ b/index.html
@@ -851,23 +851,22 @@
                 name: 'Arduino UNO R3',
                 price: 90,
                 image: 'images/arduino.png',
-                badge: 'CLÁSICO',
                 description: 'La placa más popular para aprender electrónica.',
                 specs: ['ATmega328P', '14 pines digitales', 'Arduino IDE', 'Cable incluido']
             },
             {
                 category: 'placas',
                 name: 'Arduino Nano V3.0',
-                price: 60,
+                price: 55,
                 image: 'images/nano.png',
                 description: 'Versión compacta del Arduino para prototipos.',
-                specs: ['ATmega328P 16 MHz', 'Pines soldados y sin soldar', 'USB CH340', 'Cable tipo C']
+                specs: ['ATmega328P 16 MHz', 'Pines soldados y sin soldar', 'USB CH340', 'Cable tipo C','Version pines soldados: 60 Bs']
             },
             {
                 category: 'placas',
                 name: 'PIC16877A',
                 price: 75,
-                image: 'images/arduino-nano.jpg',
+                image: 'images/pic16f.png',
                 description: 'Microcontrolador PIC16F877A DIP40 original.',
                 specs: ['Voltaje de operación:  4V a 5.5V', 'Numero de I/O: 33', 'RAM: 368 Bytes', 'Comparadores: 2 ADC 8 ch, 10-bit']
             },
@@ -875,7 +874,7 @@
                 category: 'placas',
                 name: 'Arduino Mega',
                 price: 180,
-                image: 'images/arduino-nano.jpg',
+                image: 'images/mega.png',
                 description: 'El Arduino Mega 2560 es una placa electrónica basada en el microcontrolador ATmega2560',
                 specs: ['Voltaje operativo: 5 V', 'Pines analógicos de entrada: 16', 'Pines digitales de entrada/salida: 54, 15 PWM', 'Comparadores: 2 ADC 8 ch, 10-bit']
             },
@@ -883,7 +882,7 @@
                 category: 'placas',
                 name: 'ESP32 CAM, cámara: OV2640',
                 price: 160,
-                image: 'images/arduino-nano.jpg',
+                image: 'images/espcam.png',
                 description: 'El Arduino Mega 2560 es una placa electrónica basada en el microcontrolador ATmega2560',
                 specs: ['Admite camaras: OV2640 y OV7670', 'Interfaz de programación:  MicroUSB CH340', 'RAM: 520KB SRAM+4M PSRAM', 'Wifi: 802.11 b/g/n']
             },
