--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@
                 category: 'sensores',
                 name: 'DHT22 Temperatura y Humedad',
                 price: 33,
-                image: 'images/dht22.jpg',
+                image: 'images/dht22.png',
                 description: 'Sensor preciso para medir temperatura y humedad.',
                 specs: ['Temp: -40°C a +80°C', 'Humedad: 0-100%', 'Voltaje: 3.3V-6V', 'Salida digital']
             },
@@ -901,6 +901,7 @@
                 category: 'sensores',
                 name: 'Sensor Humedad de Suelo',
                 price: 16,
+                image: 'images/humedad.png',
                 description: 'Perfecto para sistemas de riego automático.',
                 specs: ['Voltaje: 3.3V-5V', 'Salida analógica/digital', 'Para jardines inteligentes']
             },
@@ -908,6 +909,7 @@
                 category: 'sensores',
                 name: 'MAX6675 con Termocupla K',
                 price: 45,
+                image: 'images/max.png',
                 description: 'Mide temperaturas altas con precisión digital.',
                 specs: ['Interfaz SPI', 'Voltaje: 3.3V-5V', 'Rango: 0°C-800°C', '12 bits']
             },
@@ -915,7 +917,7 @@
                 category: 'sensores',
                 name: 'PIR HC-SR501',
                 price: 15,
-                badge: 'ECONÓMICO',
+                image: 'images/pir.png',
                 description: 'Detector de movimiento infrarrojo.',
                 specs: ['Voltaje: 4.5V-20V', 'Rango: 3m-7m', 'Ángulo: <100°', 'Ajustable']
             },
@@ -923,6 +925,7 @@
                 category: 'sensores',
                 name: 'HC-SR04 Ultrasónico',
                 price: 16,
+                image: 'images/ultrasonico.png',
                 description: 'Sensor de distancia por ultrasonidos.',
                 specs: ['Voltaje: 5V', 'Rango: 2cm-450cm', 'Precisión: ±1cm', 'Salida TTL']
             },
@@ -930,6 +933,7 @@
                 category: 'sensores',
                 name: 'Sensor TCRT5000 3 pines',
                 price: 11,
+                image: 'images/tcrt50003p.png',
                 description: 'El Seguidor IR de Línea Tracker TCRT5000 con Regulador es un módulo sensor infrarrojo diseñado para detectar líneas y objetos cercanos. Utiliza un emisor y receptor infrarrojo para detectar variaciones de color y proximidad',
                 specs: ['Voltaje de funcionamiento: 3.3 a 5 V', 'Corriente de trabajo: 20 mA', 'Distancia de detección: 1 - 25 mm','Salida: Digital (0/1)']
             },
@@ -937,6 +941,7 @@
                 category: 'sensores',
                 name: 'Sensor TCRT5000 4 pines',
                 price: 15,
+                image: 'images/tcrt50004p.png',
                 description: 'Sensor óptico reflexivo dónde el emisor de luz y el receptor se colocan en la misma dirección para detectar la presencia de un objeto utilizando la reflexión del infrarrojo sobre el objeto.',
                 specs: ['Voltaje de funcionamiento: 3.3 a 5 V', 'Distancia de detección: 0.1-2.5 cm', 'Salida: Digital (0/1) y Analógica']
             },
@@ -944,6 +949,7 @@
                 category: 'sensores',
                 name: 'Sensor de humedad del suelo analógico capacitivo',
                 price: 18,
+                image: 'images/humedadcap.png',
                 description: 'El Sensor de Humedad de Suelo Capacitivo v1.2 mide los niveles de humedad del suelo mediante detección capacitiva, en lugar de sensores resistivos, lo que le otorga una mayor vida útil.',
                 specs: ['Voltaje de funcionamiento: 3.3 a 5 V', 'Corriente de operacion: 5 mA', 'Dimensiones: 99×22.6 mm', 'Voltaje de salida: 0 – 5V (analógico)']
             },
@@ -951,6 +957,7 @@
                 category: 'sensores',
                 name: 'Sensor de Temperatura RTD PT100 (3 hilos)',
                 price: 70,
+                image: 'images/pt100.png',
                 description: 'Detector de temperatura por resistencia (RTD) de alta precisión, fabricado con platino, que ofrece una resistencia de \(100\ \Omega \) a \(0\text{\degree C}\). La configuración de 3 hilos compensa la resistencia de los cables, garantizando mediciones estables y precisas.',
                 specs: ['Rangos comunes de -50°C a +200°C', 'Conexión: 3 Hilos', 'Dimensiones: 4x30 mm', 'Clase: A']
             },
@@ -958,6 +965,7 @@
                 category: 'sensores',
                 name: 'Modulo encoder de medicion de velocidad',
                 price: 20,
+                image: 'images/velocidad.png',
                 description: 'Sensor de medición de velocidad de alta resolución y tiempo de respuesta corto',
                 specs: ['Voltaje de funcionamiento: 4.5 5.5 V', 'Incluye disco encoder']
             },
@@ -966,6 +974,7 @@
                 category: 'sensores',
                 name: 'Sensor magnetico para puertas y ventanas MC38',
                 price: 17,
+                image: 'images/puerta.png',
                 description: 'Es un dispositivo de seguridad que consiste en un imán y un reedswitch (interruptor magnético), normalmente cerrado NC, por lo cual,  manda un 1 lógico cuando ambas partes del sensor estan en contacto y 0 cuando estan separadas.',
                 specs: ['Corriente maxima: 0.5A', 'Distancia de activacion: 15-25 mm', 'Material: Plástico Blanco ABS']
             },
@@ -973,6 +982,7 @@
                 category: 'sensores',
                 name: '/interruptor Reed switch',
                 price: 17,
+                image: 'images/tubo.png',
                 description: 'Los interruptores tipo reed switch son dispositivos electromecanicos que se comportan como interruptor que se activan ante la presencia de un iman. ',
                 specs: ['Dimensiones: Muy pequeño, comúnmente \(14\text{\ mm}\) de longitud de vidrio y \(45\text{\ mm}\) de largo total.', 'Normalmente Abierto (NO).']
             },
