--- a/index.html
+++ b/index.html
@@ -993,20 +993,19 @@
                 name: 'Servo MG90S Metal 360°',
                 price: 35,
                 description: 'Servo de rotación continua con gran torque.',
-                specs: ['Voltaje: 4.8V-6V', 'Rotación: 360°', 'Peso: 13g', 'Para robots']
+                specs: ['Voltaje: 4.8V-6V', 'Peso: 13g', 'Engranajes metalicos']
             },
             {
                 category: 'motores',
                 name: 'Servo MG90S Metal 180°',
                 price: 35,
                 description: 'Servo metálico preciso para brazos robóticos.',
-                specs: ['Voltaje: 4.8V-6V', 'Ángulo: 180°', 'Torque: 2.2 kg·cm', 'Engranajes metal']
+                specs: ['Voltaje: 4.8V-6V', 'Torque: 2.2 kg·cm', 'Engranajes metalicos']
             },
             {
                 category: 'motores',
                 name: 'Servo MG996R Metal',
                 price: 70,
-                badge: 'POTENTE',
                 description: 'Servo de alto torque para aplicaciones exigentes.',
                 specs: ['Voltaje: 4.8V-7.2V', 'Torque: 9.4 kg·cm', 'Metal', 'Alta resistencia']
             },
@@ -1014,7 +1013,6 @@
                 category: 'motores',
                 name: 'Servo SG90 Plástico 180°',
                 price: 28,
-                badge: 'ECONÓMICO',
                 description: 'Servo económico para proyectos educativos.',
                 specs: ['Voltaje: 4.8V-6V', '180°', 'Peso: 9g', 'Ideal estudiantes']
             },
@@ -1027,38 +1025,31 @@
             },
             {
                 category: 'motores',
-                name: 'Micro Motor DC 3V-6V',
+                name: 'Motor DC 3V-6V',
                 price: 6,
                 description: 'Motor DC compacto para proyectos pequeños.',
                 specs: ['Voltaje: 3V-6V', 'Compacto', 'Bajo consumo', 'Para mini robots']
             },
             {
                 category: 'motores',
-                name: 'Motor DC Motorreductor',
+                name: 'Motor reductor DC 1:48',
                 price: 16,
-                description: 'Motor con caja reductora para autos robot.',
-                specs: ['Voltaje: 3V-6V', 'Relación: 48:1', 'Bidireccional', 'Sin rueda']
+                description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
+                specs: ['Voltaje: 3V-6V', 'Relación 1:48', 'Bidireccional']
             },
              {
                 category: 'motores',
-                name: 'Motor DC Motorreductor',
+                name: 'Motor reductor DC 1:120',
                 price: 20,
-                description: 'Motor con caja reductora para autos robot.',
-                specs: ['Voltaje: 3V-6V', 'Relación: 120:1', 'Bidireccional', 'Sin rueda']
+                description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
+                specs: ['Voltaje: 3V-6V', 'Relación 1:120', 'Bidireccional']
             },
              {
                 category: 'motores',
-                name: 'Motor DC Motorreductor',
+                name: 'Motor DC Motorreductor 1:220',
                 price: 22,
-                description: 'Motor con caja reductora para autos robot.',
-                specs: ['Voltaje: 3V-6V', 'Relación: 220:1', 'Bidireccional', 'Sin rueda']
-            },
-            {
-                category: 'motores',
-                name: 'Motor DC con Rueda',
-                price: 22,
-                description: 'Motor motorreductor con rueda incluida.',
-                specs: ['Voltaje: 3V-6V', 'Relación: 48:1', 'Con rueda', 'Listo para usar']
+                description: 'Motor DC TT con caja reductora posee una caja reductora integrada',
+                specs: ['Voltaje: 3V-6V', 'Relación 1:220', 'Bidireccional']
             },
              {
                 category: 'motores',
