--- a/index.html
+++ b/index.html
@@ -980,12 +980,41 @@
             },
             {
                 category: 'sensores',
-                name: '/interruptor Reed switch',
+                name: 'interruptor Reed switch',
                 price: 17,
                 image: 'images/tubo.png',
                 description: 'Los interruptores tipo reed switch son dispositivos electromecanicos que se comportan como interruptor que se activan ante la presencia de un iman. ',
                 specs: ['Dimensiones: Muy pequeño, comúnmente \(14\text{\ mm}\) de longitud de vidrio y \(45\text{\ mm}\) de largo total.', 'Normalmente Abierto (NO).']
             },
+              {
+                category: 'sensores',
+                name: 'Final de carrera',
+                price: 4,
+                description: 'Interruptor 5A 250V Microswitch 3PIN Hebilla ',
+                specs: ['Dimensiones: Muy pequeño']
+            },
+                {
+                category: 'sensores',
+                name: 'Fotorresistor LDR',
+                price: 3,
+                description: 'Sensar/Medir la luz ya no será un problema con la ayuda de este sensor LDR. Una fotorresistencia o LDR es un dispositivo cuya resistencia varía de acuerdo con la cantidad de luz que reciba. ',
+                specs: ['Voltaje máx: 150V,Potencia máx: 100mW,Material fotosensible: CdS (Sulfato de Sodio)']
+            },
+          {
+                category: 'sensores',
+                name: 'DHT11 sensor de temperatura',
+                price: 20,
+                description: 'Modulo DHT11 sensor de Temperatura Y Humedad Digita',
+                specs: ['relativa Sensor Dht11 Módulo,Voltaje de Operación: 3V - 5V DC,Rango de medición de temperatura: 0 a 50 °C,Precisión de medición de temperatura: ±2.0 °C']
+            },
+                {
+                category: 'sensores',
+                name: 'Sensor IR FC51',
+                price: 13,
+                description: 'Su funcionamiento es simple: cuando algun obstaculo se coloca frente al sensor, la señal infrarroja se refleja en el receptor. Cuando esto ocurre, el pasador de salida OUT se coloca a nivel bajo 0, y el led verde del módulo se enciende, indicando que se ha detectado algun obstaculo.',
+                specs: ['Voltaje: 3-5V,íngulo de cobertura: 35 °,Utiliza un comparador LM393,Salida analógica proporcional y Salida digital ']
+            },
+            
 
             // MOTORES  
             {
