--- a/index.html
+++ b/index.html
@@ -1108,6 +1108,13 @@
                 description: 'Este motor stepper es ideal para proyectos de impresoras 3D y máquinaria CNC gracias a su precisión de giro y facilidad de control. (Imagenes referenciales) ',
                 specs: ['Voltaje Nominal: 3,27V', '80 grados máximo (corriente nominal, 2 fases)', 'Corriente Nominal: 1,68A', 'Total inercia kg.m.m: 57g.m.m']
             },
+            {
+                category: 'motores',
+                name: 'Bomba de agua sumergible',
+                price: 21,
+                description: 'Da vida a tus proyectos de automatización y riego con nuestra bomba de agua sumergible pequeña diseñada especialmente para Arduino! Esta bomba de agua sumergible compacta y potente es la opción perfecta para agregar funcionalidades de riego inteligente y automatización a tus proyectos DIY. ',
+                specs: ['Voltaje de trabajo: 2.5-6 V', 'corriente de trabajo: 130-220mA', 'potencia: 0.4-1.5 W', 'caudal: 80-120L/H']
+            },
              {
                 category: 'motores',
                 name: 'rueda amarilla',
@@ -1206,6 +1213,14 @@
                 badge: 'PREMIUM',
                 description: 'Mini pantalla OLED de alta calidad.',
                 specs: ['Tecnología: OLED', 'Resolución: 128×64', 'Protocolo: I2C', 'Tamaño: 0.96"']
+            },
+               {
+                category: 'pantallas',
+                name: 'Display 7 segmentos',
+                price: 3,
+                badge: 'PREMIUM',
+                description: 'Color Rojo Ánodo común o Cátodo común de 10 pines',
+                specs: ['Corriente por segmento: 20 mA ', 'Tamaño del dígito: 0.56" (14.2 mm)', 'Tamaño del módulo:12.6x19x8 mm', 'Modelo: 5161AS,Tipo: Cátodo común']
             },
 
             // COMPONENTES VARIOS (Selección)
