--- a/index.html
+++ b/index.html
@@ -1406,6 +1406,14 @@
                 description: 'Kit completo para coche robot de 2 ruedas.',
                 specs: ['Chasis incluido', '2 motorreductores', '2 ruedas + loca', 'Todo incluido']
             },
+                {
+                category: 'kits',
+                name: 'Kit Coche 4WD',
+                price: 150,
+                badge: 'COMPLETO',
+                description: 'Kit completo para coche robot de 4 ruedas.',
+                specs: ['Chasis incluido', '4motorreductores', '4 ruedas', 'Todo incluido']
+            },
             {
                 category: 'kits',
                 name: 'Kit Auto Bombero',
